--- a/src/plot.html
+++ b/src/plot.html
@@ -55,7 +55,7 @@ body {
   function onOpen(evt)
   {
     writeToScreen("CONNECTED");
-    doSend("WebSocket rocks");
+    // doSend("WebSocket rocks");
   }
 
   function onClose(evt)
@@ -65,7 +65,7 @@ body {
 
   function onMessage(evt)
   {
-    // writeToScreen('<span style="color: blue;">RESPONSE: ' + evt.data+'</span>');
+    writeToScreen('<span style="color: blue;">RESPONSE: ' + evt.data+'</span>');
     data.push(JSON.parse(evt.data))
     tick();
     // websocket.close();
